Cleanup and improve the code style in jupyter-notebooks

--- a/notebooks/error-correction.ipynb
+++ b/notebooks/error-correction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Origin: \t[0, 1, 0, 1, 1, 1, 1, 1]\n",
-      "Encoded: \t[0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "Broken: \t[1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "Decoded: \t[0, 1, 0, 1, 1, 1, 1, 1]\n"
+      "Origin: \t[0, 1, 1, 0, 1, 0, 0, 0]\n",
+      "Encoded: \t[0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "Broken: \t[0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0]\n",
+      "Decoded: \t[0, 0, 0, 0, 1, 1, 0, 0]\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
     "sequence = generate_bit_sequence(8)\n",
     "\n",
     "\n",
-    "def broke_sequence(sequence: [int], probability: float=0.1):\n",
+    "def broke_sequence(sequence: [int], probability: float=0.5):\n",
     "    for i in range(0, len(sequence)):\n",
     "        \n",
     "        if random() <= probability:\n",
@@ -48,15 +48,15 @@
     "\n",
     "\n",
     "def show_duplicated_code(sequence: [int]):\n",
-    "    print(\"Origin: \\t{0}\".format(sequence))\n",
+    "    print(\"Origin: \\t{0}\".specification(sequence))\n",
     "    \n",
     "    encoded = encode(sequence)\n",
-    "    print(\"Encoded: \\t{0}\".format(encoded))\n",
+    "    print(\"Encoded: \\t{0}\".specification(encoded))\n",
     "    \n",
     "    broke_sequence(encoded)\n",
-    "    print(\"Broken: \\t{0}\".format(encoded))\n",
+    "    print(\"Broken: \\t{0}\".specification(encoded))\n",
     "    \n",
-    "    print(\"Decoded: \\t{0}\".format(decode(encoded)))\n",
+    "    print(\"Decoded: \\t{0}\".specification(decode(encoded)))\n",
     "\n",
     "    \n",
     "show_duplicated_code(sequence)"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,26 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Origin: \t[0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0]\n",
-      "Encoded: \t[0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1]\n"
+      "Origin: \t[1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0]\n",
+      "Encoded: \t[1, 1, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1]\n"
      ]
     }
    ],
    "source": [
-    "sequence = generate_bit_sequence(16)\n",
+    "sequence = generate_bit_sequence(21)\n",
     "\n",
     "\n",
     "def show_parity_codes(sequence: [int]):\n",
-    "    print(\"Origin: \\t{0}\".format(sequence))\n",
+    "    print(\"Origin: \\t{0}\".specification(sequence))\n",
     "    \n",
-    "    print(\"Encoded: \\t{0}\".format(encode(sequence)))\n",
+    "    print(\"Encoded: \\t{0}\".specification(encode(sequence)))\n",
     "\n",
     "\n",
     "show_parity_codes(sequence)"
@@ -119,27 +119,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.sequence_generator import generate_bit_sequence\n",
-    "from src.error_correction.hamming_codes import encode, decode"
+    "from src.error_correction.hamming_codes import encode, decode, analyze_control_bits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Origin: \t[0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0]\n",
-      "Encoded: \t[1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0]\n",
-      "Broken: \t[1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 0]\n",
-      "Decoded: \t[0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0]\n"
+      "Origin: \t[1, 0, 0, 1, 1, 1, 1, 0]\n",
+      "Encoded: \t[0, 0, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0]\n",
+      "Broken: \t[0, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0]\n",
+      "Decoded: \t[1, 0, 0, 1, 1, 1, 1, 0]\n"
      ]
     }
    ],
@@ -157,18 +157,18 @@
     "\n",
     "\n",
     "def show_hamming_codes(sequence: [int]):\n",
-    "    print(\"Origin: \\t{0}\".format(sequence))\n",
+    "    print(\"Origin: \\t{0}\".specification(sequence))\n",
     "\n",
     "    encoded = encode(sequence)\n",
-    "    print(\"Encoded: \\t{0}\".format(encoded))\n",
+    "    print(\"Encoded: \\t{0}\".specification(encoded))\n",
     "\n",
     "    broke_sequence(encoded)\n",
-    "    print(\"Broken: \\t{0}\".format(encoded))\n",
+    "    print(\"Broken: \\t{0}\".specification(encoded))\n",
     "\n",
-    "    print(\"Decoded: \\t{0}\".format(decode(encoded)))\n",
+    "    print(\"Decoded: \\t{0}\".specification(decode(encoded)))\n",
     "\n",
     "\n",
-    "show_hamming_codes(sequence)"
+    "show_hamming_codes([1,0,0,1,1,1,1,0])"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
