--- a/notebooks/integer.ipynb
+++ b/notebooks/integer.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "\n",
     "def show_ingeter_in_bits(number: int):\n",
-    "    print(\"{0} in bits: {1}\".format(number, repesent_s_int(number)))\n",
+    "    print(\"{0} in bits: {1}\".specification(number, repesent_s_int(number)))\n",
     "\n",
     "\n",
     "show_ingeter_in_bits(12121)"
