fix(notebooks): change the implementation of the representation of signed integersof signed integers

--- a/notebooks/integer.ipynb
+++ b/notebooks/integer.ipynb
@@ -23,14 +23,14 @@
     }
    ],
    "source": [
-    "from src.integer.integer import repesent_s_int\n",
+    "from src.integer.integer import MachineInteger\n",
     "\n",
     "\n",
-    "def show_ingeter_in_bits(number: int):\n",
-    "    print(\"{0} in bits: {1}\".specification(number, repesent_s_int(number)))\n",
+    "def show_machine_integer(number: int):\n",
+    "    print("{0} -> {1}".specification(number, MachineInteger(number)))\n",
     "\n",
     "\n",
-    "show_ingeter_in_bits(12121)"
+    "show_machine_integer(12121)"
    ]
   },
   {
